fix swag autorithation
