# api-gateway/docs/swagger.json
@@ -8,153 +8,6 @@
     "host": "localhost:9000",
     "basePath": "/",
     "paths": {
-        "/api/v1/budgets": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This method gets budgets",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "BUDGETS"
-                ],
-                "summary": "GET BUDGETS",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.GetListBudgetResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This method creates budget",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "BUDGETS"
-                ],
-                "summary": "CREATE BUDGETS",
-                "parameters": [
-                    {
-                        "description": "Budget",
-                        "name": "budget",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CreateBudgetRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.CreateBudgetResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/budgets/{id}": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This method updates budgets",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "BUDGETS"
-                ],
-                "summary": "UPDATE BUDGETS",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Budget id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "budget",
-                        "name": "budget",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateBudgetRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.UpdateBudgetResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/reports/income-expense": {
             "get": {
                 "security": [
@@ -379,11 +232,6 @@
         },
         "/api/v1/users": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "This method registers a new user",
                 "consumes": [
                     "application/json"
@@ -394,10 +242,10 @@
                 "tags": [
                     "AUTH"
                 ],
-                "summary": "REGISTER USERS",
+                "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "User",
+                        "description": "User registration details",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -430,15 +278,7 @@
         },
         "/api/v1/users/login": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    },
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This method login users",
+                "description": "This method logs in a user",
                 "consumes": [
                     "application/json"
                 ],
@@ -448,10 +288,10 @@
                 "tags": [
                     "AUTH"
                 ],
-                "summary": "LOGIN USERS",
+                "summary": "Login user",
                 "parameters": [
                     {
-                        "description": "User",
+                        "description": "User login credentials",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -465,46 +305,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/token.Tokens"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/users/profile": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This method retrieves a list of users",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "USERS"
-                ],
-                "summary": "GET USERS LIST",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.GetUsersResponse"
                         }
                     },
                     "400": {
@@ -539,7 +339,7 @@
                 "tags": [
                     "USERS"
                 ],
-                "summary": "GET USER BY ID",
+                "summary": "Get user by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -556,6 +356,46 @@
                             "$ref": "#/definitions/models.GetUserByIdResponse"
                         }
                     },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/users/verify": {
+            "post": {
+                "description": "This method verifies a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AUTH"
+                ],
+                "summary": "Verify user",
+                "parameters": [
+                    {
+                        "description": "User verification details",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.VerifyUserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.VerifyUserResp"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -570,62 +410,116 @@
                     }
                 }
             }
+        },
+        "/api/v1/users/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This method updates a user's information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "USERS"
+                ],
+                "summary": "Update user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User update details",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUserReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUserResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This method deletes a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "USERS"
+                ],
+                "summary": "Delete user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.DeleteUserRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "models.Budget": {
+        "models.DeleteUserRes": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "budget_id": {
-                    "type": "string"
-                },
-                "category": {
-                    "type": "string"
-                },
-                "currency": {
-                    "type": "string"
-                },
-                "spent": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.CreateBudgetRequest": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "category_id": {
-                    "type": "string"
-                },
-                "currency": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CreateBudgetResponse": {
-            "type": "object",
-            "properties": {
-                "budget_id": {
-                    "type": "string"
-                },
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "models.GetListBudgetResponse": {
-            "type": "object",
-            "properties": {
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Budget"
-                    }
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         },
@@ -673,17 +567,6 @@
                 }
             }
         },
-        "models.GetUsersResponse": {
-            "type": "object",
-            "properties": {
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.User"
-                    }
-                }
-            }
-        },
         "models.IncomeVSExpense": {
             "type": "object",
             "properties": {
@@ -713,7 +596,7 @@
                 "password": {
                     "type": "string"
                 },
-                "user_name": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -783,7 +666,7 @@
                 "password": {
                     "type": "string"
                 },
-                "user_name": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -797,7 +680,7 @@
                 "user_id": {
                     "type": "string"
                 },
-                "user_name": {
+                "username": {
                     "type": "string"
                 }
             }
@@ -813,22 +696,28 @@
                 }
             }
         },
-        "models.UpdateBudgetRequest": {
+        "models.UpdateUserReq": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "integer"
+                "email": {
+                    "type": "string"
                 },
-                "budget_id": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
         },
-        "models.UpdateBudgetResponse": {
+        "models.UpdateUserResp": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         },
@@ -841,8 +730,30 @@
                 "user_id": {
                     "type": "string"
                 },
-                "user_name": {
+                "username": {
                     "type": "string"
+                }
+            }
+        },
+        "models.VerifyUserReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.VerifyUserResp": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         },
